Fixed homepage blurb to reflect missing about page

--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@ title: Isaac Friedman, Etc.
 ---
 
     		<div class="blurb">
-        		<h1>Hi there, I'm Isaac Friedman</h1>
+        		<h2>Hi there, I'm Isaac Friedman.</h2>
 				<p>I used to be a Software Developer for a subsidiary of WPP. Now I'm Director of Operations at a small non-profit and 
-        a student at Udacity's Full Stack nanodegree program. I also do some IT consulting sometimes. I clearly have time on my hands. <a href="/about">Read more about my life...</a></p>
+				a student at Udacity's Full Stack nanodegree program. I also do some IT consulting sometimes. I clearly have time on my hands.</p> 
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
 	
