added round headshot to homepage

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@ title: Isaac Friedman, Etc.
 ---
 
     		<div class="blurb">
+          <img class="image-cropper" src="img/headshot.jpg" alt="Isaac Friedman's Headshot" />
         	<h2>Hi there, I'm Isaac Friedman.</h2>
   				<p>I'm currently Director of Operations at the <a href="https://www.millinerycs.org/friedman.html">Millinery Center Synagogue</a>.
           Before that I was a Software Developer at Millward Brown Digital, a subsidiary of <a href="https://www.wpp.com/">WPP</a>.
