feat: Added Download button to CV page

--- a/cv/index.html
+++ b/cv/index.html
@@ -3,4 +3,5 @@ layout: default
 title: Isaac Friedman's Resume
 ---
 
-<iframe src="https://resume.creddle.io/embed/g5shvmmv8wc" width="850" height="1100" seamless></iframe> 
+<h2><a href="cv/Isaac_Friedman_CV.pdf">Download</a></h2>
+<iframe src="https://resume.creddle.io/embed/g5shvmmv8wc" height="1100" width="850"></iframe>
