update embedded resume

--- a/cv/index.html
+++ b/cv/index.html
@@ -4,4 +4,5 @@ title: Isaac Friedman's Resume
 ---
 
 <h2><a href="Isaac_Friedman_CV.pdf">Download</a></h2>
-<iframe src="https://resume.creddle.io/embed/g5shvmmv8wc" height="1100" width="850"></iframe>
+<!--<iframe src="https://resume.creddle.io/embed/g5shvmmv8wc" height="1100" width="850"></iframe>-->
+<iframe src="Isaac_Friedman_CV.pdf" width=100%" height="100%"></iframe>
