--- a/index.html
+++ b/index.html
@@ -6,13 +6,11 @@ title: Isaac Friedman, Etc.
     		<div class="blurb">
           <img class="image-cropper" src="img/headshot.jpg" alt="Isaac Friedman's Headshot" />
         	<h2>Hi there, I'm Isaac Friedman.</h2>
-  				<p>I'm currently Director of Operations at the <a href="https://www.millinerycs.org/friedman.html">Millinery Center Synagogue</a>.
-          Before that I was a Software Developer at Millward Brown Digital, a subsidiary of <a href="https://www.wpp.com/">WPP</a>.
-          </p>
-	  <p>
-            In 2019 I completed <a href="https://www.udacity.com/course/full-stack-web-developer-nanodegree--nd004">Udacity Full Stack Web Developer Nanodegree</a>.
+	  <p>I'm an outdoorsman, fantasy geek and general tinkerer who loves to code. I am passionate about learning new things, especially skills, both in and out of what we traditionally think of as "tech." 
+		I try to do or learn something new every day, and that usually happens at work. I enjoy making things work and understanding why they do (or don't).
+		I'm currently a QA Automation Engineer at <a href="https://vettery.com/">Vettery</a>. Before that I worked a Software Engineer, a non-profit administrator, a handyman,
+		a calligrapher and more, sometimes at the same time. I believe that work should be challenging and fun, and that any job is worth doing well.
 	  </p>
-          </p>
 	  <p>
 	    I make things on the web. Check out <a href="https://github.com/isaac-friedman">My Github</a> for some examples.
 	  </p>
