Update company name

--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@ title: Isaac Friedman, Etc.
 	  </p>
 		
 	<p>	  
-		  I'm currently a QA Automation Engineer at <a href="https://vettery.com/">Vettery</a>. Before that I worked a Software Engineer, a non-profit administrator, a handyman,
+		  I'm currently a QA Automation Engineer at <a href="https://hired.com/">Hired</a>. Before that I worked a Software Engineer, a non-profit administrator, a handyman,
 		a calligrapher and more, sometimes at the same time. I believe that work should be challenging and fun, and that any job is worth doing well.
 	  </p>
 	  <p>
-	    I make things on the web. Check out <a href="https://github.com/isaac-friedman">My Github</a> for some examples.
+	    I like to make things on the web. Check out <a href="https://github.com/isaac-friedman">My Github</a> for some examples.
 	  </p>
     		</div><!-- /.blurb -->
 		</div><!-- /.container -->
