update homepage link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ title: Isaac Friedman, Etc.
 	  </p>
 		
 	<p>	  
-		  I'm currently a QA Automation Engineer at <a href="https://hired.com/">Hired</a>. Before that I worked a Software Engineer, a non-profit administrator, a handyman,
+		  I'm currently a QA Automation Engineer at <a href="https://haventech.us/">Haven Tech</a>. Before that I worked a Software Engineer, a non-profit administrator, a handyman,
 		a calligrapher and more, sometimes at the same time. I believe that work should be challenging and fun, and that any job is worth doing well.
 	  </p>
 	  <p>
